# UmbrixOS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/skills/: README.md
.claude/skills/add-bsp/: SKILL.md
.claude/skills/add-dependency/: SKILL.md
.claude/skills/conduct-approval-review/: SKILL.md
.claude/skills/conduct-review/: SKILL.md
.claude/skills/justify-unsafe/: SKILL.md
.claude/skills/perform-code-review/: SKILL.md
.claude/skills/propose-standard-change/: SKILL.md
.claude/skills/start-task/: SKILL.md
.claude/skills/write-adr/: SKILL.md
.claude/skills/write-architecture-doc/: SKILL.md
.github/workflows/: ci.yml
bsp-qemu-virt/: Cargo.toml  build.rs  linker.ld
bsp-qemu-virt/src/: boot.s  console.rs  cpu.rs  exceptions.rs  gic.rs  lib.rs  main.rs  vectors.s
docs/: README.md  glossary.md
docs/analysis/: README.md
docs/analysis/reports/: 2026-04-23-coverage-baseline.md  2026-04-23-miri-validation.md  2026-04-27-coverage-rerun.md
docs/analysis/reviews/: README.md
docs/analysis/reviews/business-reviews/: 2026-04-21-A6-completion.md  2026-04-22-T-006-mini-retro.md  README.md  (+4 more)
docs/analysis/tasks/: README.md  TEMPLATE.md
docs/architecture/: README.md  boot.md  exceptions.md  hal.md  ipc.md  overview.md  scheduler.md  security-model.md
docs/audits/: unsafe-log.md
docs/decisions/: 0001-microkernel-architecture.md  0002-implementation-language-rust.md  0003-license-apache-2.md  0004-target-platforms.md  0005-documentation-language-english.md  0006-workspace-layout.md  0007-console-trait.md  0009-mmu-trait.md  0010-timer-trait.md  0012-boot-flow-qemu-virt.md  0013-roadmap-and-planning.md  0014-capability-representation.md  0015-ai-integration-stance.md  0016-kernel-object-storage.md  0017-ipc-primitive-set.md  0018-badge-scheme-and-reply-recv-deferral.md  0019-scheduler-shape.md  0020-cpu-trait-v2-context-switch.md  0021-raw-pointer-scheduler-ipc-bridge.md  0022-idle-task-and-typed-scheduler-deadlock.md  0025-adr-governance-amendments.md  README.md  template.md
docs/guides/: README.md  ci.md  run-under-qemu.md  two-task-demo.md
docs/roadmap/: README.md  current.md
docs/roadmap/phases/: README.md  phase-a.md  phase-b.md  phase-c.md  phase-d.md  phase-e.md  phase-f.md  phase-g.md  phase-h.md  phase-i.md  phase-j.md
docs/standards/: README.md  architectural-principles.md  bsp-boot-checklist.md  code-review.md  code-style.md  commit-style.md  documentation-style.md  error-handling.md  infrastructure.md  localization.md  logging-and-observability.md  release.md  testing.md  unsafe-policy.md
hal/: Cargo.toml
hal/src/: console.rs  context_switch.rs  cpu.rs  irq_controller.rs  lib.rs  mmu.rs  timer.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/cap/: mod.rs  rights.rs  table.rs
kernel/src/ipc/: mod.rs
kernel/src/sched/: mod.rs
test-hal/: Cargo.toml
test-hal/src/: console.rs  cpu.rs  irq_controller.rs  lib.rs  mmu.rs  timer.rs
tools/: run-qemu.sh
(+37 files in other folders)
