[package]
name = "tyrne-bsp-qemu-virt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tyrne BSP for QEMU aarch64 virt machine (primary development target)."
build = "build.rs"

[[bin]]
name = "tyrne-bsp-qemu-virt"
path = "src/main.rs"

[dependencies]
tyrne-hal = { path = "../hal" }
tyrne-kernel = { path = "../kernel" }

[lints]
workspace = true
