[package]
name = "tyrne-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tyrne capability-based microkernel core (architecture- and board-agnostic)."

[lib]
name = "tyrne_kernel"

[dependencies]
tyrne-hal = { path = "../hal" }

[dev-dependencies]
tyrne-test-hal = { path = "../test-hal" }

[lints]
workspace = true
