[package]
name = "tyrne-test-hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fake HAL implementations for host-side Tyrne kernel unit tests."

[lib]
name = "tyrne_test_hal"

[dependencies]
tyrne-hal = { path = "../hal" }

[lints]
workspace = true
